@@ -474,7 +474,7 @@ Note that this item will be displayed only if a unique menu is defined in the Na
                                 <property name="visible">True</property>
                                 <property name="xalign">0</property>
                                 <property name="ypad">10</property>
-                                <property name="label" translatable="yes">What to do when an action being imported has the same UUID that an already existing one ?</property>
+                                <property name="label" translatable="yes">What to do when an item, action or menu, selected to be imported, has the same identifier that a currently existing one ?</property>
                                 <property name="wrap">True</property>
                               </object>
                               <packing>
@@ -488,13 +488,13 @@ Note that this item will be displayed only if a unique menu is defined in the Na
                                 <property name="homogeneous">True</property>
                                 <child>
                                   <object class="GtkRadioButton" id="PrefsNoImportButton">
-                                    <property name="label" translatable="yes">Do _not import actions whose UUID already exists</property>
+                                    <property name="label" translatable="yes">Do _not import the item</property>
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">False</property>
                                     <property name="tooltip_text" translatable="yes">This used to be the historical behavior.
-The selected file will be marked as "NOT OK" in the Summary page.
-The existing action will not be modified.</property>
+The selected item, action or menu, will not be imported and will be marked as "NOT OK" in the Summary page.
+The currently existing item will not be modified.</property>
                                     <property name="use_underline">True</property>
                                     <property name="active">True</property>
                                     <property name="draw_indicator">True</property>
@@ -505,12 +505,12 @@ The existing action will not be modified.</property>
                                 </child>
                                 <child>
                                   <object class="GtkRadioButton" id="PrefsRenumberButton">
-                                    <property name="label" translatable="yes">_Renumber imported actions whose UUID already exists</property>
+                                    <property name="label" translatable="yes">_Renumber the imported item</property>
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">False</property>
-                                    <property name="tooltip_text" translatable="yes">The selected file will be imported with a slightly modified label indicating the renumbering.
-The existing action will not be modified.</property>
+                                    <property name="tooltip_text" translatable="yes">The selected item, action or menu, will be imported with a slightly modified label indicating the renumbering.
+The currently existing item will not be modified.</property>
                                     <property name="use_underline">True</property>
                                     <property name="draw_indicator">True</property>
                                     <property name="group">PrefsNoImportButton</property>
@@ -521,11 +521,11 @@ The existing action will not be modified.</property>
                                 </child>
                                 <child>
                                   <object class="GtkRadioButton" id="PrefsOverrideButton">
-                                    <property name="label" translatable="yes">_Override existing actions when importing with same UUID</property>
+                                    <property name="label" translatable="yes">_Override the currently existing item with the imported one</property>
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">False</property>
-                                    <property name="tooltip_text" translatable="yes">The action found in the selected file will silently override the current action which has the same identifier.
+                                    <property name="tooltip_text" translatable="yes">The selected item, action or menu, will silently override the currently existing one which has the same identifier.
 Be warned: this mode may be dangerous. You will not be prompted another time.</property>
                                     <property name="use_underline">True</property>
                                     <property name="draw_indicator">True</property>
@@ -541,7 +541,7 @@ Be warned: this mode may be dangerous. You will not be prompted another time.</p
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">False</property>
-                                    <property name="tooltip_text" translatable="yes">You will be asked each time an imported UUID already exists.</property>
+                                    <property name="tooltip_text" translatable="yes">You will be asked each time a selected item has an already existing identifier.</property>
                                     <property name="use_underline">True</property>
                                     <property name="draw_indicator">True</property>
                                     <property name="group">PrefsNoImportButton</property>
